--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "url": "https://github.com/greensourcecode/bottlesforbales/issues"
   },
   "homepage": "https://github.com/greensourcecode/bottlesforbales#readme",
-  "dependencies": {},
+  "dependencies": {
+    "bootstrap": "^5.1.3"
+  },
   "devDependencies": {
     "lite-server": "^2.6.1"
   }
